--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
 a.active hr{
   display: block;
 }
+a.active ,a.active i {
+  font-weight:600;
+  color:  rgb(209, 52, 52);
+}
 hr{
   background-color: #4a5568; /* bg-gray-700 */
   width: 100%; /* w-full */
