--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ h2{
 }
 @media (max-width: 768px){
  a.active{
-  background-color: black;
+  /* background-color: black; */
   padding: 10px;
 padding-left: 23px;
 color: white;
@@ -58,4 +58,8 @@ color: white;
 h2{
   font-family: 'Outfit', sans-serif;
   font-family: 'Prata', serif;
+}
+::selection{
+  background-color: rgb(226, 97, 88);
+  color: white;
 }
